@@ -215,7 +215,7 @@ s32 SEQ_PATTERN_Handler(void)
 
       // restart *all* patterns?
       if( seq_core_options.RATOPC )
-	SEQ_CORE_ResetTrkPosAll();
+	seq_core_state.RESET_TRKPOS_REQ = 1;
     }
   }
 
